--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/aboutFragment"
+        android:id="@+id/aboutFragment2"
+        android:icon="@drawable/ic_error_outline_black_96dp"
         android:title="@string/about" />
 </menu>
