--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".AboutFragment">
+        tools:context=".About.AboutFragment">
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
