commit Error: java.lang.RuntimeException: cannot find implementation for org.ieselcaminas.valentin.managesextinguisher.database.ManagesExtinguisherDatabase. ManagesExtinguisherDatabase_Impl does not exist

--- a/app/src/main/res/layout/fragment_building.xml
+++ b/app/src/main/res/layout/fragment_building.xml
@@ -3,19 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="buildingViewModel"
+            type="org.ieselcaminas.valentin.managesextinguisher.buildings.BuildingFragmentViewModel" />
     </data>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Buildings.BuildingFragment">
+        tools:context=".buildings.BuildingFragment">
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            android:text="@string/fragmentEdificios" />
 
     </FrameLayout>
 </layout>
