--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -12,5 +12,10 @@
         android:orientation="vertical"
         android:gravity="center">
 
+        <Button
+            android:id="@+id/buttonEdificios"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/edificios" />
     </LinearLayout>
 </layout>
