--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -51,5 +51,23 @@
         <argument
             android:name="BuildingId"
             app:argType="long" />
+        <action
+            android:id="@+id/action_floorsFragment_to_floorCreatorFragment"
+            app:destination="@id/floorCreatorFragment"
+            app:popUpTo="@+id/buildingCreatorFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/floorCreatorFragment"
+        android:name="org.ieselcaminas.valentin.managesextinguisher.floors.floorcreator.FloorCreatorFragment"
+        android:label="FloorCreatorFragment" >
+        <action
+            android:id="@+id/action_floorCreatorFragment_to_floorsFragment"
+            app:destination="@id/floorsFragment"
+            app:popUpTo="@+id/floorsFragment"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="BuildingId"
+            app:argType="long" />
     </fragment>
 </navigation>
