implemented RecyclerView Floors and navigation to Tabs Elements

--- a/app/src/main/res/layout/fragment_extinguisher_creator.xml
+++ b/app/src/main/res/layout/fragment_extinguisher_creator.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="extinguisherCreatorViewModel"
+            type="org.ieselcaminas.valentin.managesextinguisher.extinguisher.extinguishercreator.ExtinguisherCreatorFragmentViewModel" />
 
     </data>
 
