--- a/app/src/main/res/layout/fragment_extinguisher_creator.xml
+++ b/app/src/main/res/layout/fragment_extinguisher_creator.xml
@@ -9,16 +9,44 @@
 
     </data>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".extinguisher.extinguishercreator.ExtinguisherCreatorFragment">
+        android:orientation="vertical">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
+
+        <EditText
+            android:id="@+id/editTextnExtinguisher"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Extinguisher number" />
 
-    </FrameLayout>
+        <EditText
+            android:id="@+id/editTextSituation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Extinguisher Situation" />
+
+        <EditText
+            android:id="@+id/editTextPowder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Extinguisher Powder" />
+
+        <EditText
+            android:id="@+id/editTextTradeMark"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Extinguisher Powder" />
+
+        <Button
+            android:id="@+id/buttonSubmitExtinguisher"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/submit" />
+    </LinearLayout>
 </layout>
