--- a/app/src/main/res/layout/recycler_extinguisher_layout.xml
+++ b/app/src/main/res/layout/recycler_extinguisher_layout.xml
@@ -13,6 +13,7 @@
     </data>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewExtinguisher"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:onClick="@{() -> clickListener.onClick(extinguisher)}"
