todo implement menu actions in extinguisher items

--- a/app/src/main/res/layout/recycler_extinguisher_layout.xml
+++ b/app/src/main/res/layout/recycler_extinguisher_layout.xml
@@ -19,6 +19,7 @@
         android:onClick="@{() -> clickListener.onClick(extinguisher)}"
         app:cardCornerRadius="12dp"
         app:cardElevation="10dp"
+        android:clickable="true"
         app:cardUseCompatPadding="true">
 
         <ImageView
