--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
-        android:id="@+id/action_Rename"
+        android:id="@+id/action_modify"
         android:orderInCategory="100"
-        android:title="@string/action_Rename"
+        android:title="@string/action_modify"
         app:showAsAction="never" />
 
     <item
