--- a/app/src/main/res/layout/fragment_flask.xml
+++ b/app/src/main/res/layout/fragment_flask.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="flaskViewModel"
+            type="org.ieselcaminas.valentin.managesextinguisher.flask.FlaskFragmentViewModel" />
     </data>
 
     <FrameLayout
@@ -26,7 +28,7 @@
         </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabCreatorFloor"
+            android:id="@+id/fabCreatorFlask"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
