--- a/app/src/main/res/layout/recycler_building_layout.xml
+++ b/app/src/main/res/layout/recycler_building_layout.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:scaleType="centerCrop"
-            tools:srcCompat="@drawable/building" />
+            tools:srcCompat="@mipmap/building" />
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarBuilding"
