--- a/app/src/main/res/layout/fragment_flask_creator.xml
+++ b/app/src/main/res/layout/fragment_flask_creator.xml
@@ -2,7 +2,9 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-
+        <variable
+            name="flaskViewModel"
+            type="org.ieselcaminas.valentin.managesextinguisher.flask.flaskcreator.FlaskCreatorFragmentViewModel" />
     </data>
 
     <FrameLayout
@@ -20,7 +22,7 @@
                 android:padding="10dp">
 
                 <EditText
-                    android:id="@+id/editTextInsertnFlaskDia"
+                    android:id="@+id/editTextInsertnFlask"
                     android:layout_width="match_parent"
                     android:inputType="textPersonName"
                     android:layout_height="wrap_content"
@@ -31,7 +33,7 @@
                     android:hint="@string/flask_n" />
 
                 <EditText
-                    android:id="@+id/editTextInsertFlaskSituationDia"
+                    android:id="@+id/editTextInsertFlaskSituation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
@@ -42,7 +44,7 @@
                     android:hint="@string/flask_sit" />
 
                 <EditText
-                    android:id="@+id/editTextInsertFlaskPowderDia"
+                    android:id="@+id/editTextInsertFlaskPowder"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
@@ -53,7 +55,7 @@
                     android:hint="@string/flask_pow" />
 
                 <EditText
-                    android:id="@+id/editTextInsertFlaskTradeMarkDia"
+                    android:id="@+id/editTextInsertFlaskTradeMark"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
@@ -64,7 +66,7 @@
                     android:hint="@string/flask_trade" />
 
                 <EditText
-                    android:id="@+id/editTextInsertFlaskModelDia"
+                    android:id="@+id/editTextInsertFlaskModel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
@@ -75,7 +77,7 @@
                     android:hint="@string/flask_model" />
 
                 <EditText
-                    android:id="@+id/editTextInsertFlaskDescriptionLocationDia"
+                    android:id="@+id/editTextInsertFlaskDescriptionLocation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
@@ -86,7 +88,7 @@
                     android:hint="@string/flask_desLoc" />
 
                 <EditText
-                    android:id="@+id/editTextInsertFlaskEmptyWeightDia"
+                    android:id="@+id/editTextInsertFlaskEmptyWeight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -96,7 +98,7 @@
                     android:hint="@string/flask_emptyW" />
 
                 <EditText
-                    android:id="@+id/editTextInsertFlaskTotalWeightDia"
+                    android:id="@+id/editTextInsertFlaskTotalWeight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
@@ -112,7 +114,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/buttonCancelDialogInsertFlask"
+                        android:id="@+id/buttonCancelInsertFlask"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/Base.Widget.AppCompat.Button.Colored"
@@ -120,7 +122,7 @@
                         android:text="@string/cancel" />
 
                     <Button
-                        android:id="@+id/buttonSubmitExtinguisherDialogInsertFlask"
+                        android:id="@+id/buttonSubmitExtinguisherInsertFlask"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/Base.Widget.AppCompat.Button.Colored"
