--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -15,4 +15,10 @@
         android:orderInCategory="100"
         android:title="@string/action_Delete"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_Info"
+        android:icon="@drawable/ic_error_outline_black_96dp"
+        android:orderInCategory="100"
+        android:title="@string/action_info"
+        app:showAsAction="never" />
 </menu>
