--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -23,25 +23,14 @@
         android:name="org.ieselcaminas.valentin.managesextinguisher.buildings.BuildingFragment"
         android:label="Buildings">
         <action
-            android:id="@+id/action_buildingFragment_to_buildingCreatorFragment"
-            app:destination="@id/buildingCreatorFragment"
-            app:popUpTo="@+id/buildingCreatorFragment"
-            app:popUpToInclusive="true" />
-        <action
             android:id="@+id/action_buildingFragment_to_floorsFragment2"
             app:destination="@id/floorsFragment"
             app:popUpTo="@+id/floorsFragment"
             app:popUpToInclusive="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/buildingCreatorFragment"
-        android:name="org.ieselcaminas.valentin.managesextinguisher.buildings.buildingcreator.BuildingCreatorFragment"
-        android:label="Building Creator"
-        tools:layout="@layout/fragment_building_creator">
         <action
-            android:id="@+id/action_buildingCreatorFragment_to_buildingFragment"
+            android:id="@+id/action_buildingFragment_self"
             app:destination="@id/buildingFragment"
-            app:popUpTo="@+id/buildingFragment"
+            app:popUpTo="@+id/floorsFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
@@ -52,25 +41,12 @@
             android:name="BuildingId"
             app:argType="long" />
         <action
-            android:id="@+id/action_floorsFragment_to_floorCreatorFragment"
-            app:destination="@id/floorCreatorFragment"
-            app:popUpTo="@+id/buildingCreatorFragment"
-            app:popUpToInclusive="true" />
-        <action
             android:id="@+id/action_floorsFragment_to_tabFragment"
             app:destination="@id/tabFragment"
             app:popUpTo="@+id/tabFragment"
             app:popUpToInclusive="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/floorCreatorFragment"
-        android:name="org.ieselcaminas.valentin.managesextinguisher.floors.floorcreator.FloorCreatorFragment"
-        android:label="Floor Creator">
-        <argument
-            android:name="BuildingId"
-            app:argType="long" />
         <action
-            android:id="@+id/action_floorCreatorFragment_to_floorsFragment"
+            android:id="@+id/action_floorsFragment_self"
             app:destination="@id/floorsFragment"
             app:popUpTo="@+id/floorsFragment"
             app:popUpToInclusive="true" />
